Prepare for recipe listing

--- a/web/components/brews-component/template.tpl.html
+++ b/web/components/brews-component/template.tpl.html
@@ -1,5 +1,5 @@
-<div>
-    <div v-for="recipe in brews">
-        <h1>{{ recipe.name }}</h1>
+<div id="brews-wrapper">
+    <div v-for=" recipe in brews " class="brew-item ">
+        <p>{{ recipe.name }}</p>
     </div>
 </div>
