Add store and routing

--- a/web/components/brews-component/template.tpl.html
+++ b/web/components/brews-component/template.tpl.html
@@ -1,5 +1,5 @@
 <div id="brews-wrapper">
-    <div v-for=" recipe in brews " class="brew-item ">
+    <div v-for=" recipe in $store.state.recipes " class="brew-item ">
         <p>{{ recipe.name }}</p>
     </div>
 </div>
