--- a/web/style/style.less
+++ b/web/style/style.less
@@ -1,6 +1,11 @@
 body {
     font-family: sans-serif;
+    padding: 0;
+    margin:0;
+    background-color: #fcfcfc;
+    font-size: 14px;
 }
 
 @import "../components/add-brew/style";
 @import "../components/recipe-list/style";
+@import "../components/top-menu/style";
