--- a/web/style/style.less
+++ b/web/style/style.less
@@ -1,9 +1,15 @@
+@import "~font-awesome/less/font-awesome";
+
 body {
     font-family: sans-serif;
     padding: 0;
     margin:0;
     background-color: #fcfcfc;
     font-size: 14px;
+}
+
+#main-wrapper {
+    padding: 32px 12px 12px;
 }
 
 @import "../components/add-brew/style";
