--- a/web/components/add-brew/style.less
+++ b/web/components/add-brew/style.less
@@ -1,4 +1,40 @@
 #file-drop-zone {
     border: dashed 2px #888888;
     height: 100px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    border-radius: 4px;
+    flex-direction: column;
+    .file-icon {
+        margin-top: 8px;
+        font-size: 30px;
+        transition: font-size 0.5s;
+    }
+    &.file-hover {
+        .file-icon {
+            font-size: 40px;
+        }
+    }
+}
+
+#input-wrapper {
+    display: flex;
+    flex-flow: row wrap;
+    max-width: 66%;
+}
+
+.input-item {
+    display: flex;
+    flex-direction: column;
+    width: 33%;
+    box-sizing: border-box;
+    padding: 12px;
+    input {
+        padding: 4px;
+        font-size: 1em;
+        &.short-field {
+            max-width: 65px;
+        }
+    }
 }
