--- a/web/components/add-brew/style.less
+++ b/web/components/add-brew/style.less
@@ -22,6 +22,20 @@
     display: flex;
     flex-flow: row wrap;
     max-width: 66%;
+    margin-top: 20px;
+}
+
+.recipe-section {
+    width: 100%;
+    background-color: #fff;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 2px 0px #d1d1d1;
+
+    h3 {
+        padding-left: 12px;
+        margin-bottom: 0;
+    }
+
 }
 
 .input-item {
@@ -30,11 +44,10 @@
     width: 33%;
     box-sizing: border-box;
     padding: 12px;
-    input {
-        padding: 4px;
-        font-size: 1em;
-        &.short-field {
-            max-width: 65px;
-        }
+    &-inline {
+        display: inline-flex;
+        flex-direction: column;
+        box-sizing: border-box;
+        padding: 12px;
     }
 }
