Extract sections to separate component

--- a/web/components/top-menu/template.tpl.html
+++ b/web/components/top-menu/template.tpl.html
@@ -4,7 +4,7 @@
          <router-link to="/">Hem</router-link>
       </li>
       <li :class="{'active': linkIsActive('/add')}">
-         <router-link to="add">Lägg till recept</router-link>
+         <router-link to="/add">Lägg till recept</router-link>
       </li>
    </ul>
 </div>
