--- a/web/style/style.less
+++ b/web/style/style.less
@@ -26,4 +26,5 @@ input {
 
 @import "../components/add-brew/style";
 @import "../components/recipe-list/style";
+@import "../components/recipe-sections/style";
 @import "../components/top-menu/style";
