--- a/web/components/add-brew/template.tpl.html
+++ b/web/components/add-brew/template.tpl.html
@@ -5,47 +5,6 @@
         <span class="fa fa-file-o file-icon"></span>
     </div>
     <div v-if="recipe">
-        <div id="input-wrapper">
-            <div class="recipe-section">
-                <h3>Information</h3>
-                <div class="row">
-                    <div class="input-item">
-                        <label for="name">Namn:</label>
-                        <input id="name" type="text" v-model="recipe.name">
-                    </div>
-                    <div class="input-item">
-                        <label for="type">Typ:</label>
-                        <input id="type" type="text" v-model="recipe.type">
-                    </div>
-                    <div class="input-item">
-                        <label for="styleName">Stil:</label>
-                        <input id="styleName" type="text" v-model="recipe.style.name">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-item-inline">
-                        <label for="batchSize">Batchstorlek:</label>
-                        <span>
-                    <input id="batchSize" type="text" v-model="recipe.batchSize" class="short-field">
-                    <span>L</span>
-                        </span>
-                    </div>
-                    <div class="input-item-inline">
-                        <label for="boilSize">Kokmängd:</label>
-                        <span>
-                    <input id="boilSize" type="text" v-model="recipe.boilSize" class="short-field">
-                    <span>L</span>
-                        </span>
-                    </div>
-                    <div class="input-item-inline">
-                        <label for="boilTime">Koktid:</label>
-                        <span>
-                    <input id="boilTime" type="text" v-model="recipe.boilTime" class="short-field">
-                    <span>min</span>
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <recipe-sections id="input-wrapper" :editable="true" :recipe="recipe"></recipe-sections>
     </div>
 </div>
