--- a/web/components/recipe-sections/template.tpl.html
+++ b/web/components/recipe-sections/template.tpl.html
@@ -37,7 +37,7 @@
       </div>
    </div>
 
-   <div class="recipe-section padding">
+   <div class="recipe-section">
       <h3>Malt</h3>
       <table>
          <tr>
