--- a/web/components/recipe-sections/template.tpl.html
+++ b/web/components/recipe-sections/template.tpl.html
@@ -52,4 +52,18 @@
          </tr>
       </table>
    </div>
+
+   <div class="recipe-section">
+      <h3>Humle</h3>
+      <table>
+         <tr>
+            <th>Humle</th>
+            <th>Mängd(g)</th>
+         </tr>
+         <tr v-for="hop in recipe.hops">
+            <td>{{ fermentable.name }}</td>
+            <td>{{ getRoundedValue(hop.amount) }} kg</td>
+         </tr>
+      </table>
+   </div>
 </div>
