--- a/web/style/style.less
+++ b/web/style/style.less
@@ -28,3 +28,5 @@ input {
 @import "../components/recipe-list/style";
 @import "../components/recipe-sections/style";
 @import "../components/top-menu/style";
+@import "../components/user-menu/style";
+@import "../components/404/style";
