--- a/web/components/top-menu/style.less
+++ b/web/components/top-menu/style.less
@@ -1,10 +1,13 @@
 #menu {
    box-shadow: 0px 8px 5px 0px rgb(217, 217, 217);
    background-color: #777777;
+   display: flex;
    ul {
       list-style-type: none;
       display: flex;
       margin: 0;
+      margin-left: 24px;
+      padding: 0;
       li {
          padding: 15px 18px;
          &.active {
@@ -20,4 +23,49 @@
       color: #fff;
       text-decoration: none;
    }
+}
+
+#user-wrapper {
+   color: #fff;
+   margin-left: auto;
+   margin-right: 24px;
+   display: flex;
+   align-items: center;
+   #user-info {
+      margin-right: 12px;
+   }
+   #login-wrapper {
+      margin-right: 12px;
+      overflow: hidden;
+      #login-content {
+         transition: transform ease 0.5s;
+         transform: translateX(0);
+         &.hidden {
+            transform: translateX(100%);
+         }
+         input {
+            border: none;
+            background-color: #777777;
+            border-bottom: 1px solid #A9A9A9;
+            color: #fff;
+            outline: none;
+            &::placeholder {
+               color: #fff;
+               text-transform: uppercase;
+               font-size: 0.7em;
+               transition: font-size ease 0.2s;
+            }
+            &:focus {
+               &::placeholder {
+                  font-size: 0.8em;
+               }
+            }
+
+         }
+      }
+   }
+   .user-icon {
+      font-size: 2em;
+   }
+
 }
