Add og fg ibu and abv to information section

--- a/web/components/recipe-sections/style.less
+++ b/web/components/recipe-sections/style.less
@@ -31,7 +31,7 @@
            }
            td {
                padding: 8px;
-               font-size: 0.8em;
+               font-size: 0.9em;
            }
            th {
                padding: 0 0 0 8px;
@@ -56,7 +56,7 @@
        display: inline-flex;
        flex-direction: column;
        box-sizing: border-box;
-       padding: 12px;
+       padding: 12px 24px;
        padding-left: 0;
    }
    &-title {
