--- a/web/components/recipe-sections/template.tpl.html
+++ b/web/components/recipe-sections/template.tpl.html
@@ -35,6 +35,24 @@
             <span class="short-field">{{recipe.boilTime}} min</span>
          </div>
       </div>
+      <div class="row">
+         <div class="input-item-inline">
+            <span class="input-item-title">OG:</span>
+            <span class="short-field">{{ recipe.estOG }}</span>
+         </div>
+         <div class="input-item-inline">
+            <span class="input-item-title">FG:</span>
+            <span class="short-field">{{ recipe.estFG }}</span>
+         </div>
+         <div class="input-item-inline">
+            <span class="input-item-title">ABV:</span>
+            <span class="short-field">{{ recipe.estAbv }}%</span>
+         </div>
+         <div class="input-item-inline">
+            <span class="input-item-title">IBU:</span>
+            <span class="short-field">{{ recipe.ibu }}</span>
+         </div>
+      </div>
    </div>
 
    <div class="recipe-section">
