--- a/web/components/recipe-sections/template.tpl.html
+++ b/web/components/recipe-sections/template.tpl.html
@@ -35,6 +35,7 @@
             <span class="short-field">{{recipe.boilTime}} min</span>
          </div>
       </div>
+      <h4>Uppskattade värden</h4>
       <div class="row row-4">
          <div class="input-item">
             <span class="input-item-title">OG:</span>
