Focus user input on transition end

--- a/web/components/top-menu/template.tpl.html
+++ b/web/components/top-menu/template.tpl.html
@@ -9,8 +9,8 @@
    </ul>
    <div id="user-wrapper">
       <div id="login-wrapper">
-         <div id="login-content" :class="{'hidden': !showLogin}">
-            <input type="text" placeholder="användare" v-model="creds.username">
+         <div id="login-content" :class="{'hidden': !showLogin}" v-on:transitionend="focusInput">
+            <input type="text" ref="username" placeholder="användare" v-model="creds.username">
             <input type="password" placeholder="LÖSEN" v-on:keyup="signin($event)" v-model="creds.password">
          </div>
       </div>
