--- a/web/components/top-menu/style.less
+++ b/web/components/top-menu/style.less
@@ -2,6 +2,7 @@
    box-shadow: 0px 8px 5px 0px rgb(217, 217, 217);
    background-color: #777777;
    display: flex;
+   height: 46px;
    ul {
       list-style-type: none;
       display: flex;
@@ -9,19 +10,23 @@
       margin-left: 24px;
       padding: 0;
       li {
-         padding: 15px 18px;
          &.active {
             background-color: #AFAFAF;
          }
-         &:hover {
-            text-decoration: underline;
-            cursor: pointer;
-         }
+         
       }
    }
    a {
       color: #fff;
       text-decoration: none;
+      display: inline-block;
+      height: 100%;
+      padding: 0 18px;
+      line-height: 46px;
+      &:hover {
+         text-decoration: underline;
+         cursor: pointer;
+      }
    }
 }
 
@@ -66,6 +71,7 @@
    }
    .user-icon {
       font-size: 2em;
+      cursor: pointer;
    }
 
 }
