Update fermentation steps object and other

--- a/web/components/add-brew/style.less
+++ b/web/components/add-brew/style.less
@@ -17,3 +17,11 @@
         }
     }
 }
+
+#add-brew-wrapper {
+    .button-wrapper {
+        width: 66%;
+        display: flex;
+        justify-content: flex-end;
+    }
+}
