--- a/web/style/style.less
+++ b/web/style/style.less
@@ -24,6 +24,14 @@ input {
     }
 }
 
+button {
+    padding: 10px 16px;
+    border: none;
+    border-radius: 4px;
+    font-family: sans-serif;
+    text-transform: uppercase;
+}
+
 @import "../components/add-brew/style";
 @import "../components/recipe-list/style";
 @import "../components/recipe-sections/style";
