Add deletion of recipes

--- a/web/components/recipe-details/template.tpl.html
+++ b/web/components/recipe-details/template.tpl.html
@@ -1,3 +1,3 @@
 <div>
-   <recipe-sections id="input-wrapper" :editable="false" :recipe="currentRecipe.recipe"></recipe-sections>
+   <recipe-sections id="input-wrapper" :editable="false" :recipe="currentRecipe"></recipe-sections>
 </div>
