--- a/web/components/recipe-sections/style.less
+++ b/web/components/recipe-sections/style.less
@@ -17,6 +17,15 @@
        margin-bottom: 20px;
        border-bottom: 1px solid lightgray;
        text-transform: uppercase;
+       display: flex;
+       align-items: center;
+       span {
+           &.delete-icon {
+            margin-left: auto;
+            font-size: 1.2em;
+            cursor: pointer;
+           }
+       }
    }
 
    table {
