--- a/web/components/user-menu/style.less
+++ b/web/components/user-menu/style.less
@@ -14,6 +14,11 @@
    }
    ul {
       margin-left: 0;
+      li {
+         padding: 8px 12px;
+         cursor: pointer;
+         width: 100%;
+      }
    }
    &::after {
       content: "";
