--- a/web/components/recipe-sections/template.tpl.html
+++ b/web/components/recipe-sections/template.tpl.html
@@ -60,7 +60,7 @@
 
    <div class="recipe-section">
       <h3>Malt</h3>
-      <table>
+      <table class="table-3-cols">
          <tr>
             <th>Malt</th>
             <th>Mängd(kg)</th>
@@ -76,7 +76,7 @@
 
    <div class="recipe-section">
       <h3>Humle</h3>
-      <table>
+      <table class="table-4-cols">
          <tr>
             <th>Humle</th>
             <th>Mängd</th>
@@ -94,7 +94,7 @@
 
    <div class="recipe-section">
       <h3>Jäst</h3>
-      <table>
+      <table class="table-3-cols">
          <tr>
             <th>Jäst</th>
             <th>Typ</th>
@@ -110,7 +110,7 @@
 
    <div class="recipe-section" v-if="getRecipe.miscs">
       <h3>Övrigt</h3>
-      <table>
+      <table class="table-3-cols">
          <tr>
             <th>Mängd</th>
             <th>Enhet</th>
@@ -126,7 +126,7 @@
 
    <div class="recipe-section">
       <h3>Mäskning</h3>
-      <table>
+      <table class="table-3-cols">
          <tr>
             <th>Namn</th>
             <th>Temperatur (°C)</th>
@@ -142,7 +142,7 @@
 
    <div class="recipe-section">
       <h3>Jäsning</h3>
-      <table>
+      <table class="table-3-cols">
          <tr>
             <th>Typ</th>
             <th>Temperatur (°C)</th>
