--- a/web/components/recipe-sections/style.less
+++ b/web/components/recipe-sections/style.less
@@ -29,9 +29,19 @@
    }
 
    table {
-       width: 100%;
-       border-collapse: collapse;
-       tr {
+        width: 100%;
+        border-collapse: collapse;
+        &.table-3-cols {
+             td, th {
+                 width: 33%;
+             }
+        }
+        &.table-4-cols {
+            td, th {
+                width: 25%;
+            }
+       }
+        tr {
            &:nth-child(odd) {
                background-color: #f1f1f1;
            }
