--- a/web/components/recipe-sections/style.less
+++ b/web/components/recipe-sections/style.less
@@ -2,7 +2,7 @@
    display: flex;
    flex-flow: row wrap;
    max-width: 66%;
-   margin-top: 20px;
+   margin: 20px auto 0;
 }
 
 .recipe-section {
