Add temperature support

--- a/web/style/style.less
+++ b/web/style/style.less
@@ -30,6 +30,14 @@ button {
     border-radius: 4px;
     font-family: sans-serif;
     text-transform: uppercase;
+    &.gray {
+        background-color: #9e9e9e;
+        color: #fff;
+    }
+    &.red {
+        background-color: #ef0000;
+        color: #fff;
+    }
 }
 
 @import "../components/add-brew/style";
