--- a/web/components/recipe-sections/template.tpl.html
+++ b/web/components/recipe-sections/template.tpl.html
@@ -154,6 +154,17 @@
             <td>{{ getRoundedValue(stage.age) }}</td>
          </tr>
       </table>
-   </div>
 
+   </div>
+   <div class="recipe-section">
+      <h3>Jästemperatur</h3>
+      <div v-if="!editable && $store.state.isLoggedIn">
+         <button class="gray" v-on:click="startFermentation" v-if="!recipe.fermStart">Starta</button>
+         <button class="red" v-on:click="stopFermentation" v-if="recipe.fermStart && !recipe.fermStop">Avsluta</button>
+      </div>
+      <div>
+         <p v-if="getLatestTemperature">Senaste avlästa temperatur: {{getLatestTemperature}}°C</p>
+         <!-- <p v-for="temp in temps">{{temp}}</p> -->
+      </div>
+   </div>
 </div>
