--- a/web/components/recipe-sections/style.less
+++ b/web/components/recipe-sections/style.less
@@ -1,88 +1,108 @@
-#input-wrapper {
-   display: flex;
-   flex-flow: row wrap;
-   max-width: 66%;
-   margin: 20px auto 0;
-}
-
-.recipe-section {
-   width: 100%;
-   background-color: #fff;
-   box-sizing: border-box;
-   box-shadow: 2px 2px 2px 0px #d1d1d1;
-   margin-bottom: 20px;
-   padding: 12px;
-   
-   h3 {
-       margin-bottom: 20px;
-       border-bottom: 1px solid lightgray;
-       text-transform: uppercase;
-       display: flex;
-       align-items: center;
-       span {
-           &.delete-icon {
-            margin-left: auto;
-            font-size: 1.2em;
-            cursor: pointer;
-           }
-       }
+@media only screen and (min-device-width: 320px) {
+   #input-wrapper {
+      display: flex;
+      flex-flow: row wrap;
+      max-width: 100%;
+      margin: 20px auto 0;
    }
-
-   table {
-        width: 100%;
-        border-collapse: collapse;
-        &.table-3-cols {
-             td, th {
-                 width: 33%;
-             }
-        }
-        &.table-4-cols {
-            td, th {
-                width: 25%;
+   .recipe-section {
+      width: 100%;
+      background-color: #fff;
+      box-sizing: border-box;
+      box-shadow: 2px 2px 2px 0px #d1d1d1;
+      margin-bottom: 20px;
+      padding: 12px;
+      .row {
+         flex-direction: column;
+      }
+      h3 {
+         margin-bottom: 20px;
+         border-bottom: 1px solid lightgray;
+         text-transform: uppercase;
+         display: flex;
+         align-items: center;
+         span {
+            &.delete-icon {
+               margin-left: auto;
+               font-size: 1.2em;
+               cursor: pointer;
             }
-       }
-        tr {
-           &:nth-child(odd) {
+         }
+      }
+      table {
+         width: 100%;
+         border-collapse: collapse;
+         &.table-3-cols {
+            td,
+            th {
+               width: 33%;
+            }
+         }
+         &.table-4-cols {
+            td,
+            th {
+               width: 25%;
+            }
+         }
+         tr {
+            &:nth-child(odd) {
                background-color: #f1f1f1;
-           }
-           &:first-child {
+            }
+            &:first-child {
                background-color: #fff;
-           }
-           td {
+            }
+            td {
                padding: 8px;
                font-size: 0.9em;
-           }
-           th {
+            }
+            th {
                padding: 0 0 0 8px;
                text-align: left;
                font-size: 0.85em;
                color: #616161;
                text-transform: uppercase;
-           }
-       }
+            }
+         }
+      }
    }
-
+   .input-item {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      box-sizing: border-box;
+      padding: 0 12px 12px 0;
+      &-inline {
+         display: inline-flex;
+         flex-direction: column;
+         box-sizing: border-box;
+         padding: 12px 24px;
+         padding-left: 0;
+      }
+      &-title {
+         text-transform: uppercase;
+         color: #616161;
+         font-size: 0.85em;
+         font-weight: bold;
+         margin-bottom: 4px;
+         flex: 0 1 50%;
+      }
+   }
 }
 
-.input-item {
-   display: flex;
-   flex-direction: column;
-   width: 33%;
-   box-sizing: border-box;
-   padding: 0 12px 12px 0;
-
-   &-inline {
-       display: inline-flex;
-       flex-direction: column;
-       box-sizing: border-box;
-       padding: 12px 24px;
-       padding-left: 0;
+@media only screen and (min-device-width: 640px) {
+   #input-wrapper {
+      display: flex;
+      flex-flow: row wrap;
+      max-width: 66%;
+      margin: 20px auto 0;
    }
-   &-title {
-       text-transform: uppercase;
-       color: #616161;
-       font-size: 0.85em;
-       font-weight: bold;
-       margin-bottom: 4px;
+   .recipe-section {
+      .row {
+         flex-direction: row;
+      }
+   }
+   .input-item {
+      flex-direction: column;
+      width: 33%;
    }
 }
